--- a/public/events.html
+++ b/public/events.html
@@ -116,7 +116,8 @@
         </div>
         <div class="row mt-5 justify-content-center">
             <div class="card card-custom mx-2 mb-3">
-                <a href="events/Know your space/knowyourspace.html">
+                <a onclick="regclosed()">
+                <!--<a href="events/Know your space/knowyourspace.html">-->
                     <div class="card" id="event-card">
                         <picture>
                             <source type="image/webp" srcset="img/events/event10.webp">
