--- a/public/events.html
+++ b/public/events.html
@@ -116,6 +116,28 @@
         </div>
         <div class="row mt-5 justify-content-center">
             <div class="card card-custom mx-2 mb-3">
+                
+                <a href="events/techtrix/techtrix.html">
+                    <div class="card" id="event-card">
+                        <picture>
+                            <source type="image/webp" srcset="img/events/event11.webp">
+                            <source type="image/jpg" srcset="img/events/event11.jpg">
+                            <img class="img-fluid" src="img/events/event11.jpg" alt="Event 11 Image">
+
+                        </picture>
+                        <div class="card-body">
+                            <div class="card-date">Coming soon</div>
+                            <div class="card-heading"> TECHTRIX</div>
+                            <p class="card-info">Skill Development Sessions</p>
+                        
+                            <!-- <div class="live-ticker boxed">
+                            <span class="opacityPulse">LIVE</span>
+                            </div> -->
+                        </div>
+                    </div>
+                </a>
+            </div> 
+            <div class="card card-custom mx-2 mb-3">
                 <a onclick="regclosed()">
                 <!--<a href="events/Know your space/knowyourspace.html">-->
                     <div class="card" id="event-card">
