--- a/public/about.html
+++ b/public/about.html
@@ -214,7 +214,7 @@
                             <i class="pe-7s-phone"></i>
                         </span>
                         <span class="title-info">CALL US:</span>
-                        <span class="description-info">+91 97467 22404</span>
+                        <span class="description-info">+91 8304908930</span>
                     </div>
 
                     <div class="contact-info">
@@ -273,7 +273,7 @@
                             <div class="footer-content">
                                 <h4>CONTACT INFO</h4>
                                 <p>
-                                    +91 97467 22404<br>
+                                    +91 8304908930<br>
                                     proddec@ceconline.edu <br>
                                     https://cec-proddec.web.app
                                 </p>
