--- a/public/index.html
+++ b/public/index.html
@@ -119,9 +119,10 @@
                         to
                         practical use.
                     </p>
-                    <div class="text-center"> <a class="bcm-member-btn btn" href="membership-registration.html">
-                            Become a member</a>
-                    </div>
+                    <!--<div class="text-center">  <a class="bcm-member-btn btn" href="membership-registration.html">
+                        Become a member</a>
+                            
+                    </div>-->
                 </article>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -146,27 +147,27 @@
             <div class="row">
                 <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                     <div class="services-icon">
-                        <span class="icon-linegraph"></span>
-                        <hr>
-                    </div>
-                    <h4>PRODDEC@25</h4>
-                    <p>Celebrating 25 years of PRODDEC <br>14-15 MAY - 2022</p>
-                </div>
-                <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                    <div class="services-icon">
                         <span class="icon-megaphone"></span>
                         <hr>
                     </div>
                     <h4>Execom Call</h4>
-                    <p>For 2022-2023<br>29 APR - 01 MAY - 2022</p>
+                    <p>For 2023-2024<br>06-09 APR 2023</p>
+                </div>
+                <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
+                    <div class="services-icon">
+                        <span class="icon-linegraph"></span>
+                        <hr>
+                    </div>
+                    <h4>TECHTRIX</h4>
+                    <p>Skill Development Sessions <br>21 OCT 2022 - 27 APR 2023</p>
                 </div>
                 <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                     <div class="services-icon">
                         <span class="icon-lightbulb"></span>
                         <hr>
                     </div>
-                    <h4>Wissenaire</h4>
-                    <p>Turning Ideas Into Action<br>25 APR - 2021</p>
+                    <h4>PRODDEC@25</h4>
+                    <p>Celebrating 25 years of PRODDEC<br>14-15 MAY - 2022</p>
                 </div>
             </div>
         </div>
