--- a/public/membership-registration.html
+++ b/public/membership-registration.html
@@ -115,9 +115,9 @@
         <div class="row">
             <div class="col-md-6 col-lg-6 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                 <p>
-                    1. Complete the payment of ₹350. Use either UPI Transfer or UPI Bank Transfer.
-                </p>
-                <p>
+                    1. Please Complete the payment of ₹600. 
+                </p><br><br>
+                <!--<p>
                     <b>UPI Transfer</b>
                 </p>
                 <table class="table table-dark" id="reg-details-table">
@@ -131,26 +131,26 @@
                             <td style="text-transform: none;">akshayvettuvelil005@okicici</td>
                         </tr>
                     </tbody>
-                </table>
+                </table>-->
                 <p>
-                    <b>UPI Bank Transfer</b>
-                </p>
+                    <b>Bank Transfer</b>
+                </p><br>
                 <table class="table table-dark" id="reg-details-table">
                     <tbody>
                         <tr>
                             <td>Account number</td>
-                            <td>99980105734185</td>
+                            <td>10240100334184</td>
                         </tr>
                         <tr>
                             <td>IFSC</td>
-                            <td>FDRL0001880</td>
+                            <td>FDRL0001024</td>
                         </tr>
                         <tr>
                             <td>Recipient name</td>
-                            <td>AKSHAY KUMAR V B</td>
+                            <td>PRODDEC</td>
                         </tr>
                     </tbody>
-                </table>
+                </table><br><br>
                 <p>
                     2. Grab screenshot of the transaction details.
                 </p>
@@ -182,10 +182,10 @@
             <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                 <article>
                     <p>
-                        3. Fill up the Google Form & upload the screenshot to complete the registration process.
+                        3. Fill up the Google Form & upload the screenshot of the transaction details to complete the registration process.
                     </p>
                     <div class="text-center"> <a class="bcm-member-btn btn"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSetJHib1wbWhH6lwHQJDNn4rBND9UPDfk4KML2eUOIcTI74VA/viewform?usp=sf_link"
+                            href="https://forms.gle/YReYBPq21LsaWZkx9"
                             target="_blank">
                             FILL UP THE FORM</a>
                     </div>
