--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
                     <li><a href="membership-registration.html">Become a member</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="announcement.html">Announcements</a></li> 
                     <li><a href="notice.html">Notice</a></li>
                     <li><a href="media.html">Media</a></li>
                     <li><a href="about.html">About</a></li>
@@ -90,8 +91,10 @@
 
 
     <!-- Particles.js div -->
-    <div id="particles-js">
+    <div id="particles-js" >
+        <style> #particles-js { height:  100vh;} </style>
         <div class="heading">
+            <style> .heading { margin-top: 7%; } </style>
             <h1>PRODDEC</h1>
             <h3>
                 Refined Ideas
@@ -145,14 +148,6 @@
         </div>
         <div class="services-home-page">
             <div class="row">
-                <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                    <div class="services-icon">
-                        <span class="icon-megaphone"></span>
-                        <hr>
-                    </div>
-                    <h4>Execom Call</h4>
-                    <p>For 2023-2024<br>06-09 APR 2023</p>
-                </div>
                 <div class="col-md-4 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                     <div class="services-icon">
                         <span class="icon-linegraph"></span>
@@ -255,7 +250,7 @@
                             <div class="footer-content">
                                 <h4>CONTACT INFO</h4>
                                 <p>
-                                    +91 8304908930<br>
+                                    +91 81388 49120<br>
                                     proddec@ceconline.edu <br>
                                     https://cec-proddec.web.app
                                 </p>
