--- a/public/media.html
+++ b/public/media.html
@@ -74,6 +74,7 @@
                     <li><a href="membership-registration.html">Become a member</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="announcement.html">Announcements</a></li> 
                     <li><a href="notice.html">Notice</a></li>
                     <li><a href="media.html">Media</a></li>
                     <li><a href="about.html">About</a></li>
@@ -168,7 +169,7 @@
                             <div class="footer-content">
                                 <h4>CONTACT INFO</h4>
                                 <p>
-                                    +91 8304908930<br>
+                                    +91 81388 49120<br>
                                     proddec@ceconline.edu <br>
                                     https://cec-proddec.web.app
                                 </p>
