--- a/public/membership-registration.html
+++ b/public/membership-registration.html
@@ -71,6 +71,7 @@
                     <li><a href="membership-registration.html">Become a member</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="announcement.html">Announcements</a></li> 
                     <li><a href="notice.html">Notice</a></li>
                     <li><a href="media.html">Media</a></li>
                     <li><a href="about.html">About</a></li>
@@ -185,7 +186,7 @@
                         3. Fill up the Google Form & upload the screenshot of the transaction details to complete the registration process.
                     </p>
                     <div class="text-center"> <a class="bcm-member-btn btn"
-                            href="https://forms.gle/YReYBPq21LsaWZkx9"
+                            href="https://forms.gle/Vo4weHE2roG1GxxYA"
                             target="_blank">
                             FILL UP THE FORM</a>
                     </div>
@@ -230,7 +231,7 @@
                             <div class="footer-content">
                                 <h4>CONTACT INFO</h4>
                                 <p>
-                                    +91 97467 22404<br>
+                                    +91 81388 49120<br>
                                     proddec@ceconline.edu <br>
                                     https://cec-proddec.web.app
                                 </p>
