--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -72,6 +72,7 @@
                     <li><a href="membership-registration.html">Become a member</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="announcement.html">Announcements</a></li> 
                     <li><a href="notice.html">Notice</a></li>
                     <li><a href="media.html">Media</a></li>
                     <li><a href="about.html">About</a></li>
@@ -178,7 +179,7 @@
                             <div class="footer-content">
                                 <h4>CONTACT INFO</h4>
                                 <p>
-                                    +91 8304908930<br>
+                                    +91 81388 49120<br>
                                     proddec@ceconline.edu <br>
                                     https://cec-proddec.web.app
                                 </p>
