Fixed Event form bug

--- a/public/events.html
+++ b/public/events.html
@@ -119,7 +119,7 @@
 
             <div class="card card-custom mx-2 mb-3">
                 
-                <a href="https://forms.gle/dLRXbRL7ESUFrJ8r5"target="_blank"
+                <a href="https://forms.gle/Qn4zLMUcnwsRcBxt6"target="_blank"
                 rel="noopener noreferrer">
                     <div class="card" id="event-card">
                         <picture>
