--- a/public/membership-registration.html
+++ b/public/membership-registration.html
@@ -109,31 +109,31 @@
     <!-- Step #1 -->
     <div class="container margin-top">
         <div class="main-title">
-            <h1>Step #1</h1>
-            <hr>
-            <h6>Payment</h6>
+            <h1>Method#1 - Online</h1>
+            <hr style="width: 100%; margin-bottom: 3rem;"> 
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-6 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                 <p>
-                    1. Please Complete the payment of ₹600. 
-                </p><br><br>
-                <!--<p>
+                    1. Please Complete the payment of ₹599 for first years. 
+                </p><br>
+                <p>
                     <b>UPI Transfer</b>
                 </p>
                 <table class="table table-dark" id="reg-details-table">
                     <tbody>
                         <tr>
                             <td>Mobile number</td>
-                            <td>7561804503</td>
+                            <td>9497089006</td>
                         </tr>
                         <tr>
                             <td>UPI ID</td>
-                            <td style="text-transform: none;">akshayvettuvelil005@okicici</td>
+                            <td style="text-transform: none;"><a href="upi://pay?pa=jervinabrahamkuriakose2310-1@oksbi&pn=PRODDEC&am=599&cu=INR" style="color: #FFA200;">jervinabrahamkuriakose2310-1@oksbi</a></td>
                         </tr>
                     </tbody>
-                </table>-->
-                <p>
+                </table>
+                <p>Or Click <span><a href="upi://pay?pa=jervinabrahamkuriakose2310-1@oksbi&pn=PRODDEC&am=599&cu=INR" style="color: #FFA200;">Here</a> to direct to Payment App</span></p>
+                <!-- <p>
                     <b>Bank Transfer</b>
                 </p><br>
                 <table class="table table-dark" id="reg-details-table">
@@ -151,10 +151,23 @@
                             <td>PRODDEC</td>
                         </tr>
                     </tbody>
-                </table><br><br>
+                </table><br><br> -->
+
+                <br><br>
                 <p>
                     2. Grab screenshot of the transaction details.
                 </p>
+
+                <br><br>
+                <p>
+                    3. Fill up the Google Form & upload the screenshot of the transaction details to complete the registration process.
+                </p>
+                <div class="text-center"> <a class="bcm-member-btn btn"
+                        href="https://forms.gle/9EzgWxLbs85Rq5Ku9"
+                        target="_blank">
+                        FILL UP THE FORM</a>
+                </div>
+
             </div>
             <div class="col-md-6 col-lg-6 align-items-center wow fadeInUp" data-wow-duration="0.8s"
                 data-wow-delay="0.4s">
@@ -175,21 +188,30 @@
     <!-- Step #2 -->
     <div class="container margin-top">
         <div class="main-title">
-            <h1>Step #2</h1>
-            <hr>
-            <h6>Registration</h6>
+            <h1>Method #2 - Offline</h1>
+            <hr style="width: 100%; margin-bottom: 3rem;"> 
         </div>
         <div class="row">
             <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                 <article>
                     <p>
-                        3. Fill up the Google Form & upload the screenshot of the transaction details to complete the registration process.
+                        Contact any of our social media team.
                     </p>
-                    <div class="text-center"> <a class="bcm-member-btn btn"
-                            href="https://forms.gle/Vo4weHE2roG1GxxYA"
-                            target="_blank">
-                            FILL UP THE FORM</a>
-                    </div>
+                    <table class="table table-dark" id="reg-details-table">
+                        <tbody>
+                            <tr>
+                                <td>Raveen K Pillai</td>
+                                <td>9495632059</td>
+                                <td><a style="color: #FFA200;" href="http://wa.me/+919495632059">WhatsApp</a></td>
+                            </tr>
+                            <tr>
+                                <td>Jervin Abraham Kuriakose</td>
+                                <td>9497089006</td>
+                                <td><a style="color: #FFA200;" href="http://wa.me/+919497089006">WhatsApp</a></td>
+                            </tr>
+                           
+                        </tbody>
+                    </table>
                 </article>
             </div>
         </div>
